# learn-polars

./: .gitignore  CMakeLists.txt  README.md  presentation.ipynb  pyproject.toml
data/: Cars.csv  Warfarin.csv
pyext/: CMakeLists.txt  simple.cc
