[tool.poetry]
name = "polars-intro"
version = "0.1.0"
description = ""
authors = ["johnnyxcy <johnny.xcy1997@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.3.0"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
holoviews = "^1.19.1"
ipywidgets = "^8.1.3"

[tool.ruff]
line-length = 88
indent-width = 4
extend-include = ["*.ipynb"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
